<resources>
    <string name="app_name">Iyan 3D Pro</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scene_selection">SceneSelection</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="clone">Clone</string>
    <string name="backUp">Backup</string>
    <string name="publish">Publish</string>
    <string name="tutorial">Tutorial</string>
    <string name="settings">Settings</string>
    <string name="rate">Rate this app</string>
    <string name="share">Share</string>
    <string name="contact">Contact</string>
    <string name="one" translatable="false">1</string>
    <string name="twentyFour" translatable="false">24</string>
    <string name="twoFortyFrame" translatable="false">240</string>
    <string name="front">Front</string>
    <string name="top">Top</string>
    <string name="left">Left</string>
    <string name="back">Back</string>
    <string name="right">Right</string>
    <string name="bottom">Bottom</string>
    <string name="models">Models</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="text">Text</string>
    <string name="light">Light</string>
    <string name="objFile">OBJ File</string>
    <string name="addBone">Add bone</string>
    <string name="particle">Particle Effects</string>
    <string name="apply_animation">Apply Animation</string>
    <string name="save_animation">Save Animation</string>
    <string name="title_activity_editor_view">EditorView</string>
    <string name="title_activity_user_on_boarding">UserOnBoarding</string>
    <string name="title_activity_preview">Preview</string>
    <string name="delete_animation">   Delete Animation</string>
    <string name="app_id" translatable="false">1434740593485806</string>
    <string name="gcm_defaultSenderIdOwn" translatable="false">328259754555</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="scenes">Scenes</string>
    <string name="myscene">My Scene</string>
    <string name="signin">Sign in</string>
    <string name="signinBottomMsg">Login to enjoy more features</string>
    <string name="newsFeed">News Feed</string>
    <string name="clearall">Clear All</string>
    <string name="myObject">MY OBJECTS</string>
    <string name="add">ADD</string>
    <string name="animation">ANIMATION</string>
    <string name="options">OPTIONS</string>
    <string name="export">EXPORT</string>
    <string name="move">MOVE</string>
    <string name="rotate">ROTATE</string>
    <string name="scale">SCALE</string>
    <string name="cancel">CANCEL</string>
    <string name="addtoscene">ADD TO SCENE</string>
    <string name="allmodels">All Models</string>
    <string name="renderingprogress">RENDERING PROGRESS</string>
    <string name="resolution">RESOLUTION</string>
    <string name="backgroundcolor">BACKGROUND COLOR</string>
    <string name="watermark">WATERMARK</string>
    <string name="renderingstyle">RENDERING STYLE</string>
    <string name="renderNormalMsg">Render Normal shader in your device.</string>
    <string name="renderToonMsg">Render Toon shader in your device.</string>
    <string name="renderCloudMsg">Render with High Quality in cloud.</string>
    <string name="Credits">Credits</string>
    <string name="pleseSignin">Please SignIn to continue.</string>
    <string name="chooseMinTwoFrame">Please choose minimum two frames for export Video.</string>
    <string name="notenoughCredit">You are not have enough credits please recharge your account to proceed.</string>
    <string name="sceneContainParticle">Scene contains particles which is currently not supported in HQ rendering.</string>
    <string name="somthingwrongmsg">Something Wrong try again.</string>
    <string name="outOfMemory">Out of memory.</string>
    <string name="unableToContinue">Unable to continue try again.</string>
    <string name="imgSavedSuccessMsg">Image Successfully saved in your SDCard/Iyan3D/Render</string>
    <string name="vidSavedSuccessMsg">Video successfully saved in your SDCard/Iyan3D/Render</string>
    <string name="unableToCompleteExportMsg">Check your Internet connection it was slow. So unable to complete the operation.</string>
    <string name="toolbar">TOOLBAR</string>
    <string name="renderpreviewsize">RENDER PREVIEW SIZE</string>
    <string name="framecountDisplay">FRAME COUNT DISPLAY</string>
    <string name="renderpreviewposition">RENDER PREVIEW POSITION</string>
    <string name="restorePurchase">RESTORE PURCHASE</string>
    <string name="multiselect">MultiSelect  </string>
    <string name="only_five_light_msg">Scene Contains only maximum 5 lights.</string>
    <string name="check_network_msg">Please Check your network connection.</string>
    <string name="trending">Trending</string>
    <string name="featured">Featured</string>
    <string name="top_rated">Top Rated</string>
    <string name="recent">Recent</string>
    <string name="my_animations">My Animations</string>
    <string name="select_text_or_character_msg">Please select a text or character to apply the animation.</string>
    <string name="bone_count_not_match_msg">Bone count cannot match.</string>
    <string name="sign_in_to_publish">Please sign in to publish your animation.</string>
    <string name="rename_animation_msg">Rename your Animation</string>
    <string name="animation_name">Animation Name</string>
    <string name="ok">OK</string>
    <string name="animation_name_empty">Animation name cannot be empty.</string>
    <string name="animation_name_special_char">Animation Name cannot contain any special characters.</string>
    <string name="name_already_exists">Name already exists.</string>
    <string name="characters">Characters</string>
    <string name="backgrounds">Backgrounds</string>
    <string name="accessories">Accessories</string>
    <string name="minecraft">Minecraft</string>
    <string name="my_library">My Library</string>
    <string name="confirmation">Confirmation</string>
    <string name="object_will_be_deleted_msg">This object will be deleted in all the scenes this action cannot be undone.</string>
    <string name="rename_your_asset">Rename your Asset</string>
    <string name="asset_name">Asset Name</string>
    <string name="asset_name_empty">Asset name cannot be empty.</string>
    <string name="asset_name_contain_special_char">Asset Name cannot contain any special characters.</string>
    <string name="pick_color">Pick Color</string>
    <string name="texture_will_be_deleted_msg">This Texture will be deleted in all the scenes this action cannot be undone.</string>
    <string name="no_aniamtion_in_frame_msg">There is no animation in this frame.</string>
    <string name="tap_to_clone_share_delete_msg">Tap to Clone Delete Share the scene.</string>
    <string name="tap_to_open_scene">Tap to open the scene</string>
    <string name="tap_to_create_scene">Tap to create a new scene</string>
    <string name="create_a_new_scene">Creates a new scene.</string>
    <string name="manage_your_account">Manage your account.</string>
    <string name="settings_tutorial_contact"><![CDATA[Settings, Tutorials & contact us.]]></string>
    <string name="add_frames">Add Frames.</string>
    <string name="standard_view_angles">Standard view angles.</string>
    <string name="tap_to_change_model_category">Tap to change model category.</string>
    <string name="tap_to_change_animation_category">Tap to change animation category.</string>
    <string name="select_an_animation_preview">Select an animation to preview.</string>
    <string name="tap_to_apply_animation_to">Tap to apply animation to the selected object.</string>
    <string name="enter_your_text_here">Enter your text here.</string>
    <string name="add_bevel_to_3d_text">Add bevel to 3D text.</string>
    <string name="choose_color_for_3d_text">Choose color for 3D text</string>
    <string name="toggle_between_store_fonts_and_local">Toggle between store fonts and the fonts you have imported.</string>
    <string name="choose_a_font_to_preview">Choose a font to preview 3D text.</string>
    <string name="import_selected_3d_text">Import selected 3D text into the scene.</string>
    <string name="select_and_obj">Select an OBJ to preview</string>
    <string name="choose_texture">Choose a texture to apply for the selected model.</string>
    <string name="tap_to_import_obj_from_local">Tap to import OBJ from Local Storage.</string>
    <string name="tap_to_import_texture_from_gallery">Tap to import texture from Gallery.</string>
    <string name="tap_to_choose_texture_or_color">Tap to choose texture color for the selected OBJ Model.</string>
    <string name="import_the_model_with_selected_texture_or_color">Import the model with the selected texture color.</string>
    <string name="choose_a_texture_to_apply">Choose a texture to apply for the selected model.</string>
    <string name="tap_to_import_texture">Tap to import texture from Gallery.</string>
    <string name="import_the_model_with_selected_texture_color">Import the model with the selected texture color.</string>
    <string name="select_an_image_to_preview">Select an image to preview.</string>
    <string name="tap_to_import_the_selected_image">Tap to import the selected image into your scene.</string>
    <string name="tap_to_import_image_from_gallery">Tap to import image from gallery.</string>
    <string name="tap_to_add_a_joint">Tap to add a joint to the \nselected joint in the rig.</string>
    <string name="switch_to_move_roate_scale">Switch to Move Rotate Scale mode.</string>
    <string name="enable_mirror_to_move">Enable mirror to move rotate \nthe mirror joint of the \nselected joint.</string>
    <string name="cancel_rigging">Cancel rigging and \ngo back to the scene.</string>
    <string name="current_mode_in_rigging">Current mode in\n rigging.</string>
    <string name="tap_add_rigged_model">Tap to add \nthe rigged model\n in to the scene.</string>
    <string name="play_animation_preview">Play the animation preview.</string>
    <string name="manage_objects_in_scene">Manage objects in the scene.</string>
    <string name="import_objects_into_the_scene">Import objects into the scene.</string>
    <string name="apply_animation_to_the_model">Apply animation to the selected model/text.</string>
    <string name="change_properties_of_the_camera">Change properties of the Camera roll.</string>
    <string name="export_image_or_video">Export image/video to the Camera roll.</string>
    <string name="switch_to_move_rotate_scale">Switch to Move Rotate Scale mode.</string>
    <string name="undo_redo_actions">Undo / Redo your actions.</string>
    <string name="enable_disable_watermark">Enable/Disable Watermark image.</string>
    <string name="limit_the_number_of_frames">Limit the number of frames to be exported.</string>
    <string name="credits_required_for_the_export">Credits required for the \ncurrent export.</string>
    <string name="tap_to_start_export">Tap to start\n exporting.</string>
    <string name="choose_wheather_toolbar_should">Choose whether toolbar should be \n on the right or left side \n in Editor.</string>
    <string name="choose_to_display_time">Choose to display time in \n Frames or Duration(sec).</string>
    <string name="enable_disable_multiselect">Enable or Disable multiple \n objects selection.</string>
    <string name="tap_to_restore_purchase">Tap to restore purchase \nWorks only if purchased\n Premium in previous version.</string>
    <string name="tap_to_save">Tap to save \nand close the \n Settings.</string>
    <string name="import_objects_into_scene">Import objects into the scene.</string>
    <string name="enter_text">Enter Text</string>
    <string name="with_bone">With Bone</string>
    <string name="font_store">Font Store</string>
    <string name="my_fonts">My Fonts</string>
</resources>